<resources>
    <string name="app_name">Book Circle</string>
    <string name="profile_photo">Profile photo</string>
    <string name="Username">Username:</string>
    <string name="City">Location:</string>
    <string name="Email">Email:</string>
    <string name="AboutMe">Bio:</string>
    <string name="Address">Address</string>
    <string name="edit_profile_msg_error_username">Please, insert Username</string>
    <string name="show_profile_books">Library</string>
    <string name="show_profile_send_message">Send message</string>
    <string name="login_getposition">Get</string>
    <string name="login_welcomeBack">Welcome back</string>
    <string name="login_welcome">Welcome</string>
    <string name="no_internet">No internet connection</string>
    <string name="connecting">Connecting...</string>
    <string name="insert_location">Insert your location</string>
    <string name="Location">Location</string>
    <string name="Location_label">Get your position</string>
    <string name="Error_position">Please, get your position</string>
    <string name="title_activity_edit">Edit Profile</string>
    <string name="title_activity_show_profile">My Profile</string>
    <string name="title_activity_login_activity">Login_activity</string>
    <string name="title_activity_search_book">Search a book</string>
    <string name="title_activity_info_book">Book details</string>
    <string name="title_activity_info_user">Info user</string>
    <string name="title_activity_generic_info">Book details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_book_found">BookFoundActivity</string>
    <string name="title_activity_book_generic_info">Book_generic_info</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_list_of_chat">listOfChatActivity</string>
    <string name="title_activity_show_request">Show request</string>
    <string name="title_activity_request_book">Request book</string>
    <string name="photo_from_gallery">Select photo from gallery</string>
    <string name="photo_from_camera">Capture photo from camera</string>
    <string name="photo_remove">Remove picture</string>
    <string name="fragment_home_distance">Distance:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_element_addbook">Add new book</string>
    <string name="nav_element_showprofile">Show my profile</string>
    <string name="nav_element_mylibrary">My library</string>
    <string name="nav_element_logOut">Log out</string>
    <string name="top_books">Home</string>
    <string name="my_library">Library</string>
    <string name="lent_books">Lent</string>
    <string name="borrowed_books">Borrowed</string>
    <string name="found_books">Results</string>
    <string name="search_books">Research</string>
    <string name="search_book_text_title">Title</string>
    <string name="search_book_text_category">Category</string>
    <string name="search_book_text_ISBN">ISBN</string>
    <string name="search_book_text_author">Author</string>
    <string name="search_book_button_text">Search</string>
    <string name="search_book_progress_bar_text">Searching...</string>
    <string name="search_books_button_cv">More info</string>
    <string name="search_book_nothing_inserted">Please insert something</string>
    <string name="info_book_label_title">Title:</string>
    <string name="info_book_label_category">Category:</string>
    <string name="info_book_label_ISBN">Isbn:</string>
    <string name="info_book_label_author">Author:</string>
    <string name="info_book_label_edition_year">Edition year:</string>
    <string name="info_book_label_publisher">Publisher:</string>
    <string name="info_book_label_description">Description:</string>
    <string name="info_book_label_owner">Owner:</string>
    <string name="info_book_label_book_conditions">Conditions:</string>
    <string name="info_book_label_book_num_pages">N. pages:</string>
    <string name="info_book_snackbar">The library has been updated</string>
    <string name="info_book_label_pages">N. pages:</string>
    <string name="info_book_delete_this_book">Delete</string>
    <string name="info_book_delete_want_delete">Do you want delete this book?</string>
    <string name="info_book_deleted">Book has been successfully deleted</string>
    <string name="info_book_not_deleted">Some errors occurred, book not deleted</string>
    <string name="info_book_modify_this_book">Modify</string>
    <string name="info_book_request_this_book">Request</string>
    <string name="info_book_delete">Delete</string>
    <string name="info_book_modified">Book has benn modified correctly</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="add_book_read_ISBN">Search ISBN details</string>
    <string name="add_a_book">Add a book</string>
    <string name="add_book_title">"Title"</string>
    <string name="add_book_author">"Author(s) (Comma separated)"</string>
    <string name="add_book_edition_year">"Edition year"</string>
    <string name="add_book_ISBN">"ISBN"</string>
    <string name="add_book_publisher">"Publisher"</string>
    <string name="add_book_helper_text_ISBN">"Write exactly 13 numbers"</string>
    <string name="add_book_description">"Description"</string>
    <string name="add_book_category">"Category (Comma separated)"</string>
    <string name="add_book_info_not_available">"Information not available"</string>
    <string name="add_book_no_description">"No description"</string>
    <string name="add_book_error">"Insert at least ISBN, Title and Author "</string>
    <string name="add_book_permission_camera">"Please, grant camera permission to use the QR Scanner"</string>
    <string name="add_book_pages">"Number of pages"</string>
    <string name="add_book_title_not_found">book not found</string>
    <string name="add_book_added">Book added successfully</string>
    <string-array name="book_conditions">
        <item>Select book conditions</item>
        <item>Excellent</item>
        <item>Good</item>
        <item>Bad</item>
    </string-array>
    <string-array name="setting_language">
        <item>Italiano</item>
        <item>English</item>
    </string-array>
    <string name="select_lang">Language</string>
    <string name="top_frag_floating_action_menu_ISBN">Search by ISBN</string>
    <string name="top_frag_floating_action_menu_category">Search by category</string>
    <string name="top_frag_floating_action_menu_title">Search by title</string>
    <string name="top_frag_floating_action_menu_author">Search by author</string>
    <string name="top_frag_floating_action_menu_search">Back</string>
    <string name="title">Search</string>
    <string name="facebook_application_id" translatable="false">207778776488778</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb207778776488778</string>
    <string name="send_your_message">Text message</string>
    <string name="mychat">My chat</string>
    <string name="chat_updated">List of chat updated!</string>
    <string name="chat_photo">Photo</string>
    <string name="request_book_message_to_owner">Message to owner</string>
    <string name="request_book_sent">Request sent!</string>
    <string name="requests_book_sent">Sent requests</string>
    <string name="requests_book_received">Received requests</string>
    <string name="requests_book_archive">Closed requests</string>
    <string name="request_book_applicant">Applicant:</string>
    <string name="request_book_accept_request">Accept request</string>
    <string name="request_book_start_date">Date:</string>
    <string name="request_book_status">Status:</string>
    <string name="request_book_status_pending">Pending</string>
    <string name="request_book_status_exchg_applicant">Waiting for applicant</string>
    <string name="request_book_status_exchg_confirm">To confirm</string>
    <string name="request_book_status_on_loan">On loan</string>
    <string name="request_book_status_closed">Closed</string>
    <string name="request_book_label_start_date_loan">Start loan:</string>
    <string name="request_book_archived">Archived</string>
    <string name="request_book_label_end_date">End loan:</string>
    <string name="request_book_status_request_accepted">Request accepted</string>
    <string name="request_book_wait_owner">Waiting for owner</string>
    <string name="request_book_applicant_has_sent_request">Applicant has sent request</string>
    <string name="request_book_waiting_for_owner_to_accept">Waiting for owner to accept</string>
    <string name="request_book_waiting_for_applicant_exchange_confirmation">Waiting for applicant\'s exchange confirmation</string>
    <string name="request_book_confirm_exchange">Confirm exchange</string>
    <string name="request_book_applicant_has_confirmed_exchange">Applicant has confirmed exchange</string>
    <string name="request_book_waiting_for_owner_exchange_confirmation">Waiting for owner\'s exchange confirmation</string>
    <string name="request_book_start_date_loan">Start loan:</string>
    <string name="request_book_close_loan">Close loan</string>
    <string name="Updating">Updating..</string>
    <string name="cancel">cancel</string>
    <string name="send">Send</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="image_fullscreen">image_fullscreen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_book_request_already_done">Book already requested</string>
    <string name="search_book_algolia_request_permission">Grant the permission to view the map!</string>
    <string name="search_book_algolia_no_found">No book found!</string>
    <string name="affermative_response">Yes, I am</string>
    <string name="sure_question">Are you sure?</string>
    <string name="send_request">Send request</string>
    <string name="message">Message</string>
    <string name="search_book_toolbar_title">Search by</string>
    <string name="title_activity_request_review">RequestReview</string>
    <string name="request_review_write">Write your review</string>
    <string name="request_review_review">Review</string>
    <string name="request_review_no_rating">Please insert also a rating</string>
    <string name="request_book_modified">Book correctly modified</string>
    <string name="start_date">Start date</string>
    <string name="request_book_book_title">Book title</string>
    <string name="info_book_book_status">Status:</string>
    <string name="info_book_status_free">Available</string>
    <string name="loan_book_start_date">Request date</string>
    <string name="request_book_label_text_message">Write a message to owner</string>
    <string name="request_book_applicant_no_dots">Applicant</string>
    <string name="info_book_label_owner_no_dots">Owner</string>
    <string name="show_profile_reviews">Reviews</string>
    <string name="title_activity_edit_book">Edit book</string>
    <string name="display_search_on_map_map">Mappa</string>
    <string name="display_search_on_map_distance">Distance:</string>
    <string name="search_book_algolia_isbn">Search ISBN</string>
    <string name="search_book_algolia_author">Search Author</string>
    <string name="search_book_algolia_title">Search Title</string>
    <string name="info_book_still_on_loan">You can\'t edit/delete a book on loan</string>
</resources>