<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_alignParentTop="true"
        android:id="@+id/mainActivity_drawer_profileImg"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="5dp"
        android:baselineAligned="false"
        android:contentDescription="@string/nav_header_desc"
        android:visibility="visible"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_marginTop="8dp"
        android:layout_below="@id/mainActivity_drawer_profileImg"
        android:id="@+id/mainActivity_drawer_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_marginBottom="8dp"
        android:id="@+id/mainActivity_drawer_email"
        android:layout_width="wrap_content"
        android:layout_below="@id/mainActivity_drawer_username"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />

</RelativeLayout>
