<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_book_toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/edit_book_layout_scroll_view"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_margin="@dimen/layout_margin"
        >

        <!--la scrollview puo' avere un solo figlio-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <!--thumbnail-->
            <ImageView
                android:id="@+id/edit_book_thumbnail"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_thumbnail_cover_book" />

            <!--button read barcode with camera-->
            <Button
                android:id="@+id/edit_book_read_barcode"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/edit_book_thumbnail"
                android:background="@drawable/corner_button"
                android:padding="16dp"
                android:layout_margin="8dp"
                android:text="@string/read_barcode"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:textColor="@android:color/white"
                android:textSize="10sp" />


            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_ISBN"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_book_read_barcode"
                android:layout_margin="16dp"
                android:maxLength="13"
                app:errorColor="#ddaa00"
                app:hasClearButton="true"
                app:helperText="@string/add_book_helper_text_ISBN"
                app:helperTextColor="@color/colorAccent"
                app:labelText="@string/add_book_ISBN"
                app:maxCharacters="13"
                app:panelBackgroundColor="@android:color/transparent"
                app:primaryColor="@color/colorAccent">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_ISBN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:inputType="number"
                    android:maxLines="1"
                    android:imeOptions="actionSearch"
                    android:imeActionId="@integer/manual_insert_isbn_and_search"

                    />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <!--spinner condizioni libro-->
            <Spinner
                android:id="@+id/edit_book_spinner_book_cond"
                android:layout_margin="16dp"
                android:clickable="true"
                android:layout_below="@id/edit_book_label_ISBN"
                android:spinnerMode="dropdown"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:verticalScrollbarPosition="defaultPosition"
                android:dropDownSelector="@color/colorAccent"
                android:backgroundTint="#000000"
                android:touchscreenBlocksFocus="true"
                android:focusable="true"
                />


            <!--scatola description-->
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="16dp"
                app:errorColor="#ddaa00"
                android:layout_below="@id/edit_book_spinner_book_cond"
                app:hasClearButton="true"
                app:labelText="@string/add_book_description"
                app:panelBackgroundColor="@android:color/transparent"
                app:maxCharacters="250"
                app:useDenseSpacing="true"
                app:primaryColor="@color/colorAccent"
                tools:layout_marginTop="16dp">


                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:isScrollContainer="true"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:maxLines="8"
                    />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <!--photo list-->
            <HorizontalScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_book_label_description"
                android:id="@+id/edit_book_horizontal_scroll_view">
                <LinearLayout android:id="@+id/edit_book_horizontal_photo_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                </LinearLayout>
            </HorizontalScrollView>



            <!--scatola publisher-->
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edit_book_horizontal_scroll_view"
                android:layout_margin="16dp"
                app:errorColor="#ddaa00"
                app:labelText="@string/add_book_publisher"
                app:maxCharacters="50"
                app:panelBackgroundColor="@android:color/transparent"
                app:primaryColor="@color/colorAccent"
                tools:layout_marginTop="16dp">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <!--scatola titolo-->
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:layout_below="@id/edit_book_label_publisher"
                app:errorColor="#ddaa00"
                app:maxCharacters="100"
                app:labelText="@string/add_book_title"
                app:panelBackgroundColor="@android:color/transparent"
                app:primaryColor="@color/colorAccent">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


            <!--scatola autori-->
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_authors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edit_book_label_title"
                android:layout_margin="16dp"
                app:errorColor="#ddaa00"
                app:maxCharacters="100"
                app:labelText="@string/add_book_author"
                app:panelBackgroundColor="@android:color/transparent"
                app:primaryColor="@color/colorAccent"
                tools:layout_marginTop="16dp">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

            <!--scatola categorie-->
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/edit_book_label_authors"
                android:layout_margin="16dp"
                app:maxCharacters="100"
                app:errorColor="#ddaa00"
                app:labelText="@string/add_book_category"
                app:panelBackgroundColor="@android:color/transparent"
                app:primaryColor="@color/colorAccent"
                tools:layout_marginTop="16dp">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


            <!--scatola edition year-->
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_edition_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/edit_book_label_categories"
                android:layout_margin="16dp"
                app:errorColor="#ddaa00"
                app:labelText="@string/add_book_edition_year"
                app:panelBackgroundColor="@android:color/transparent"
                app:primaryColor="@color/colorAccent">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_edition_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>



            <!--scatola numero di pagine-->
            <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                android:id="@+id/edit_book_label_number_of_pages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/edit_book_label_edition_year"
                android:layout_margin="16dp"
                app:errorColor="#ddaa00"
                app:labelText="@string/add_book_pages"
                app:panelBackgroundColor="@android:color/transparent"
                app:primaryColor="@color/colorAccent">

                <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                    android:id="@+id/edit_book_number_of_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"

                    />
            </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>

