<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:minHeight="?android:attr/listPreferredItemHeightSmall"
    tools:context=".searchBook.BookFound">

    <android.support.v7.widget.CardView
        android:id="@+id/book_found_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
       >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/book_found_thumbnail"
                android:layout_width="60dp"
                android:layout_height="90dp"
                android:layout_marginTop="8dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp" />

            <TextView
                android:layout_marginTop="4dp"
                android:id="@+id/book_found_label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/book_found_thumbnail"
                android:text="@string/info_book_label_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/book_found_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/book_found_label_title"
                android:layout_marginStart="8dp"
                android:layout_toRightOf="@id/book_found_label_title"
                android:textSize="13dp" />


            <TextView
                android:id="@+id/book_found_label_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/book_found_author"
                android:layout_below="@id/book_found_title"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_toEndOf="@id/book_found_thumbnail"
                android:text="@string/info_book_label_author"
                android:textSize="16dp"
                android:textStyle="normal|bold" />


            <TextView
                android:id="@+id/book_found_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_found_title"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:textSize="13dp"
                android:layout_toEndOf="@+id/book_found_label_author" />

            <TextView
                android:id="@+id/book_found_label_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/book_found_author"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/book_found_thumbnail"
                android:layout_alignBaseline="@id/book_found_distance"
                android:text="@string/fragment_home_distance"
                android:textSize="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/book_found_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_found_author"
                android:layout_marginStart="8dp"
                android:layout_marginTop="13dp"
                android:textSize="13dp"
                android:layout_toEndOf="@+id/book_found_label_distance" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>